Bug 156834 - SVG: dominant-baseline attribute not supported
Summary: SVG: dominant-baseline attribute not supported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-21 09:27 UTC by Xisco Faulí
Modified: 2024-02-09 12:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (332 bytes, image/svg+xml)
2023-08-21 09:27 UTC, Xisco Faulí
Details
comparison (41.86 KB, image/png)
2023-08-21 09:28 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-08-21 09:27:36 UTC
Created attachment 189060 [details]
sample file

Steps to reproduce:
1. Open attached document

More info -> https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/dominant-baseline

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dedf098e742550622cec6fdc639550371d9e58cf
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-08-21 09:28:29 UTC
Created attachment 189061 [details]
comparison
Comment 2 Commit Notification 2023-08-21 18:00:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8fa209ce2e800dc8a51e941cd42a65fa8b2eb14b

tdf#156834: Add basic support for dominant-baseline attribute

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-22 19:00:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7ecfaad43a41f2e20f178d5693d37ce1128e2dea

tdf#156834: Add basic support for dominant-baseline attribute

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.