tdf#156834: Add basic support for dominant-baseline attribute

Change-Id: I005d6ca6bc340d73cae639ccd09321a0a00bc4b7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155892
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 3b357ecb7bca4ab3844d1900eced55f46e6f8e1c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155913